[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/characters/glaciela/glaciela_idle.png" type="Texture" id=1]
[ext_resource path="res://assets/characters/glaciela/glaciela_walk.png" type="Texture" id=2]
[ext_resource path="res://assets/characters/glaciela/glaciela_idle_1.png" type="Texture" id=3]
[ext_resource path="res://scripts/characters/Glaciela.gd" type="Script" id=4]
[ext_resource path="res://assets/characters/glaciela/glaciela_dash.png" type="Texture" id=5]
[ext_resource path="res://assets/weapons/simple_spear.png" type="Texture" id=6]
[ext_resource path="res://assets/UI/chargebar_charging.png" type="Texture" id=7]
[ext_resource path="res://scenes/particles/ChargingParticle.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/UI/charged_attack_meter_empty.png" type="Texture" id=9]
[ext_resource path="res://assets/UI/healthbar_empty.png" type="Texture" id=10]
[ext_resource path="res://assets/characters/glaciela/glaciela_walk_2.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "Dash",
"speed": 1.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "Default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 11 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="Animation" id=6]
resource_name = "ChargedAttackRight"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SpearSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 15 ), Vector2( 16, 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpearSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 110.0, 40.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_weapon_to_invisible"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "Hurt"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.490196 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.490196 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.490196 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SpearSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 50.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpearSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpearSprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "SpearSwingLeft1"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SpearSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -65.0, -120.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_weapon_to_invisible"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpearSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpearSprite:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
resource_name = "SpearSwingLeft2"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SpearSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -105.0, -40.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_weapon_to_invisible"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpearSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpearSprite:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=13]
resource_name = "SpearSwingLeft3"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SpearSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -90.0, -70.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_weapon_to_invisible"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpearSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 5, 5 ), Vector2( -35, 5 ), Vector2( 5, 5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpearSprite:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=14]
resource_name = "SpearSwingLeft4"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SpearSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1.75 ),
"update": 0,
"values": [ 32.5, -105.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_weapon_to_invisible"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpearSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5, 5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpearSprite:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "SpearSwingRight1"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SpearSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 65.0, 120.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_weapon_to_invisible"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpearSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpearSprite:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "SpearSwingRight2"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SpearSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 105.0, 40.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_weapon_to_invisible"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpearSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpearSprite:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=12]
resource_name = "SpearSwingRight3"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SpearSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 90.0, 70.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_weapon_to_invisible"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpearSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 5, 5 ), Vector2( 35, 5 ), Vector2( 5, 5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpearSprite:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=15]
resource_name = "SpearSwingRight4"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SpearSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -32.5, 105.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_weapon_to_invisible"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpearSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpearSprite:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 63.6348, 39.1389 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 66.6314, 55.1411 )

[sub_resource type="CapsuleShape2D" id=8]
radius = 38.492
height = 17.3718

[node name="Glaciela" type="Node2D"]
script = ExtResource( 4 )

[node name="SpearSprite" type="Sprite" parent="."]
position = Vector2( 3, 15 )
rotation = 0.872665
scale = Vector2( 6, 6 )
texture = ExtResource( 6 )
offset = Vector2( 0, -12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 5, 5 )
frames = SubResource( 1 )
animation = "Dash"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ChargedAttackRight = SubResource( 6 )
anims/Hurt = SubResource( 7 )
anims/RESET = SubResource( 3 )
anims/SpearSwingLeft1 = SubResource( 4 )
anims/SpearSwingLeft2 = SubResource( 11 )
anims/SpearSwingLeft3 = SubResource( 13 )
anims/SpearSwingLeft4 = SubResource( 14 )
anims/SpearSwingRight1 = SubResource( 2 )
anims/SpearSwingRight2 = SubResource( 10 )
anims/SpearSwingRight3 = SubResource( 12 )
anims/SpearSwingRight4 = SubResource( 15 )

[node name="AttackCollision" type="Area2D" parent="." groups=["Sword"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackCollision"]
position = Vector2( 86.5819, 5.05854 )
shape = SubResource( 5 )
disabled = true

[node name="ChargedAttackCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChargedAttackCollision"]
position = Vector2( 102.213, -11.0022 )
shape = SubResource( 9 )

[node name="MeleeTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="ChargeBar" type="TextureProgress" parent="."]
visible = false
margin_left = -49.805
margin_top = -102.36
margin_right = -29.805
margin_bottom = -96.36
rect_scale = Vector2( 5, 5 )
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChargingParticle" parent="." instance=ExtResource( 8 )]
visible = false
amount = 4

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 5.05854 )
shape = SubResource( 8 )

[node name="ChargedAttackBar" type="TextureProgress" parent="."]
margin_left = -48.0
margin_top = -75.0
margin_bottom = -69.0
rect_scale = Vector2( 2, 4 )
texture_under = ExtResource( 9 )

[connection signal="area_entered" from="AttackCollision" to="." method="_on_AttackCollision_area_entered"]
[connection signal="timeout" from="MeleeTimer" to="." method="_on_MeleeTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
